gcc/testsuite/g++.dg/modules/redecl-2_b.C
// { dg-additional-options -fmodules-ts }
import foo;

struct Bar // { dg-error "cannot declare.*in a different module" }
{
};

